testdata/errors/importcycle/cycle.go
package importcycle

import _ "github.com/tinygo-org/tinygo/testdata/errors/importcycle"
